[package]
name = "tabbyssl"
version = "0.10.0"
edition = "2018"
authors = ["Yiming Jing"]
license = "BSD-3-Clause"
readme = "README.md"
description = "Previously MesaLink, TabbySSL is an OpenSSL compatibility layer for the Rust TLS stack."
keywords = ["tls", "ssl", "rust"]
homepage = "https://github.com/ymjing/tabbyssl"
repository = "https://github.com/ymjing/tabbyssl"
categories = ["network-programming"]
build = "build.rs"

[badges]
travis-ci = { repository = "ymjing/tabbyssl", branch = "master"  }

[lib]
name = "tabbyssl"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["error_strings", "verifier"]
error_strings = ["rustls/logging"]
verifier = ["rustls/dangerous_configuration"]
jemalloc_allocator = ["jemallocator"]

[dependencies]
rustls = { git = "https://github.com/ctz/rustls", default-features = false }
ring = "0.16.5"
webpki = "0.21.0"
webpki-roots = "0.18.0"
sct = "0.6.0"
untrusted = "0.7"
env_logger = "0.7"
libc = "0.2"
lazy_static = "1.4"
enum_to_u8_slice_derive = "0.1"
bitflags = "1.2"
base64 = "0.11"
parking_lot = "0.9"
jemallocator = { version = "0.3", optional = true }

[dev-dependencies]
log = "0.4"
env_logger = "0.7"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
overflow-checks = true

[[example]]
name = "bogo_shim"
path = "examples/bogo_shim/bogo_shim.rs"
required-features = ["verifier", "error_strings"]
