[package]
name = "tabbyssl"
version = "0.1.0"
edition = "2018"
authors = ["Yiming Jing"]
license = "Apache-2.0"
readme = "README.md"
description = "Previously MesaLink, TabbySSL is an OpenSSL compatibility layer for the Rust TLS stack."
keywords = ["tls", "ssl", "rust"]
homepage = "https://github.com/ymjing/tabbyssl"
repository = "https://github.com/ymjing/tabbyssl"
categories = ["network-programming"]

[badges]
travis-ci = { repository = "ymjing/tabbyssl", branch = "main"  }

[lib]
name = "tabbyssl"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["tls12", "error_strings", "verifier"]
tls12 = ["rustls/tls12"]
error_strings = ["rustls/logging"]
verifier = ["rustls/dangerous_configuration"]

[dependencies]
rustls = { version = "0.20.0", default-features = false }
webpki = "0.22.0"
webpki-roots = "0.22.1"
sct = "0.7.0"
libc = "0.2.105"
lazy_static = "1.4.0"
bitflags = "1.3.2"
ring = "0.16.20"
base64 = "0.13.0"
env_logger = "0.9.0"
rustls-pemfile = "0.2.1"
untrusted = "0.7.1"
thiserror = "1.0.30"

[[bin]]
name = "simple_client"
path = "examples/simple_client.rs"

[package.metadata.raze]
workspace_path = "//cargo"
default_gen_buildrs = false
package_aliases_dir = "cargo"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"

[package.metadata.raze.crates.ring.'0.16.20']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"

[package.metadata.raze.crates.webpki.'0.22.0']
gen_buildrs = true
data_attr = "glob([\"src/**/*.der\"])"

[package.metadata.raze.crates.log.'0.4.14']
additional_flags = [
    "--cfg=atomic_cas"
]

[package.metadata.raze.crates.proc-macro2.'1.0.30']
additional_flags = [
    "--cfg=use_proc_macro",
]