# Copyright (c) 2019-2021, Yiming Jing
# Copyright (c) 2017-2019, The MesaLink Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_test", "rustfmt_test")

rust_test(
    name = "unit_tests",
    srcs = glob(["**/*.rs"]),
    data = ["certs"],
    deps = [
        "//cargo:libc",
        "//cargo:rustls",
        "//cargo:rustls_pemfile",
        "//src:tabbyssl_rlib",
    ],
)

rustfmt_test(
    name = "rustfmt",
    targets = [
        "//src:tabbyssl_rlib",
        "//tests:unit_tests",
    ],
)

rust_clippy(
    name = "clippy",
    testonly = True,
    deps = [
        "//src:tabbyssl_rlib",
        "//tests:unit_tests",
    ],
)
